# yeild-router

./: DEPLOY.md  README.md
.cursor/rules/: contract-implementation-order.mdc
backend/: README.md  package.json
backend/contracts/: StrategyManager.json  Vault.json
backend/src/: index.ts
contracts/: foundry.toml
contracts/script/: DemoScenario.s.sol  Deploy.s.sol  DeployParachainStrategy.s.sol  DeployPolkadotHub.s.sol  DeployVault.s.sol
contracts/src/: MockStrategy.sol  StrategyBase.sol  StrategyManager.sol  StrategyOptimizerAdapter.sol  Vault.sol  XCMRouter.sol
contracts/test/: IntegrationTests.t.sol  StrategyManager.t.sol  StrategyManagerEdgeCases.t.sol  StrategyOptimizerAdapter.t.sol  Vault.t.sol  VaultEdgeCases.t.sol  XCMRouter.t.sol  YieldSimulation.t.sol
frontend/: .npmrc  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  CTASection.tsx  DashboardPreview.tsx  DashboardSidebar.tsx  DepositCard.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingNavbar.tsx  Navigation.tsx  PerformanceChart.tsx  PortfolioStats.tsx  ProfileHeader.tsx  Providers.tsx  RebalanceHistory.tsx  StrategiesSection.tsx  StrategyAllocation.tsx  StrategyTable.tsx  TechnicalDetails.tsx  TransactionHistory.tsx  WithdrawCard.tsx  XCMActivity.tsx  XCMSection.tsx  YieldAnalytics.tsx  YieldProjectionCard.tsx
frontend/config/: wagmi.ts
frontend/contracts/: abi.json  erc20.json  strategyManagerABI.json  (+1 more)
pvm/: Cargo.toml  strategy_optimizer.rs
pvm/src/: lib.rs
(+12 files in other folders)
